# odin

./: CRNN.ipynb  EfficientNet.ipynb  EfficientNet_PyTorch_Example.ipynb  Label_generation_for_sequence.ipynb  NAMES.md  README.md  TF_lecture.ipynb  WideResnetMicroNet.ipynb  Wide_resnet_Karan.ipynb  types.ty
Database_Systems/: README.md
Haskell/: factorial.hs  flip.hs  functions.hs  init.hs  record_populate.hs  recursion.hs  replicate.hs  state.hs  state2.hs  take.hs  unique.hs  varInterchange.hs  variables.hs  viewPatterns.hs  zipWith.hs
Hasktorch/: autograd.hs  autograd.md  autograd2.hs  model1.hs  multiLayerAutograd.hs  sample.hs
compiler/: README.md  return_2.c  return_2.s
cpp_exp/: run  tuple.cpp
haskell-ffi/: ex.h  ex.h.gch  lib.h  run  sample_ffi.hi  sample_ffi.hs  unsafePerformIO.hs
haskell-testing/addition/: Addition.hs  addition.cabal
haskell-testing/addition/.stack-work/: stack.sqlite3
haskell-testing/addition/.stack-work/ghci/59db6750/: cabal_macros.h
haskell-testing/addition/.stack-work/ghci/aa4005c0/: cabal_macros.h
haskell-testing/addition/.stack-work/ghci/c6a05923/: cabal_macros.h
haskell-testing/addition/.stack-work/install/x86_64-linux/edfa8c2ea671a21024985ff1d43e6c502607bf4c56ea6939e52f953f4f63a660/8.8.3/pkgdb/: addition-0.1.0.0-Gd34nKFF8ZWGSSXsDZ7n7h.conf  addition-0.1.0.0-LAlqpJ9F7xm4zLkEo7dC3c.conf  package.cache
haskell-testing/addition/Generators/: Main.hs
haskell-testing/addition/Recsum/: Main.hs
image_processing/: README.md
localization/: README.md
protobuf/: addressbook_use.py  addressbook_use2.py  ex1.pb.cc  (+4 more)
(+27 files in other folders)
