-- addition.cabal

name:                    addition
version:                 0.1.0.0 
license-file:            LICENSE
author:                  Shiv 
maintainer:              championballer
category:                Text   
build-type:              Simple
cabal-version:           >=1.10

library
  exposed-modules:       Addition
  ghc-options:           -Wall -fwarn-tabs
  build-depends:         base >=4.7 && <5
                       , hspec
                       , QuickCheck
  hs-source-dirs:        .  
  default-language:      Haskell2010

executable recsum
  import:                config
  hs-source-dirs:        Recsum
  main-is:               Main.hs
  ghc-options:           -fno-warn-partial-type-signatures
  build-depends:         base >=4.7 && <5
                       , hspec

executable generator-examples
  import:                config
  hs-source-dirs:        Generators
  main-is:               Main.hs
  ghc-options:           -fno-warn-partial-type-signatures
  build-depends:         base >=4.7 && <5
                       , hspec
                       , QuickCheck
